--- a/css/pressgang.css
+++ b/css/pressgang.css
@@ -6,14 +6,15 @@
     border-bottom: none;
 }
 
+.pressgangMenu img {
+    margin: 0px;
+}
+
 .pressgangMenu {
     position: fixed;
     top: 8px;
     left: 8px;
     width: 200px;
     max-height: 450px;
-}
-
-.pressgangScrollMenu {
     overflow-y: auto;
 }
