--- a/css/pressgang.css
+++ b/css/pressgang.css
@@ -14,7 +14,7 @@
     position: fixed;
     top: 8px;
     left: 8px;
+    bottom: 0px;
     width: 300px;
-    max-height: 450px;
     overflow-y: auto;
 }
