Added help overlay

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@
     width: 512px;
     padding: 4px 4px 4px 4px;
     color: white;
-    position: absolute;
+    position: fixed;
     font-weight: bolder;
 }
 
