Added help overlay

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@
     top: 0px;
     margin-top: 2px;
     display: inline;
-    float: left;
+    float: right;
 }
 
 .pressgang_websites_calloutRight2 {
