Overriding conflicting bootstrap styles
Overriding conflicting bootstrap styles

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1107883

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

Working on https://bugzilla.redhat.com/show_bug.cgi?id=1112049

--- a/css/pressgang.css
+++ b/css/pressgang.css
@@ -18,3 +18,23 @@
     width: 300px;
     overflow-y: auto;
 }
+
+.alert-badge {
+    background-color: #d9534f !important;
+    color: #fff !important;
+}
+
+/*
+    These CSS overrides fix conflicts between BootStrap and Publican styles.
+*/
+
+/* https://bugzilla.redhat.com/show_bug.cgi?id=1054510 */
+pre {
+    word-break: inherit !important;
+}
+
+/* https://bugzilla.redhat.com/show_bug.cgi?id=1012763 */
+code {
+    color: inherit !important;
+    background-color: inherit !important;
+}
